test/compile_errors/err_regex_neg_match_no_capture.w
//! expect-check-fail: undefined variable

fn main:
    let line = "status=200"
    if line !~ /^status=(\d+)$/:
        print($1)
